# Absolomb

./: CMakeLists.txt  LICENSE  README.md
include/: SFML.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  loader.h  material.h  ray.h  sphere.h  threadpool.h  utility.h  vec3.h
src/: SFML.cpp  camera.cpp  hittable_list.cpp  interval.cpp  main.cpp  ray.cpp  sphere.cpp  threadpool.cpp  vec3.cpp
